@@ -13,6 +13,7 @@ Scala Common Enrich: removed event_vendor and ue_name and renamed ue_properties 
 Scala Common Enrich: added JacksonJsonUtils
 Scala Common Enrich: created ScalazJson4sUtils.scala
 Scala Common Enrich: created enrichmentConfigs.scala
+Scala Common Enrich: added tests for ScalazJson4sUtils and enrichmentConfigs
 Scala Hadoop Enrich: bumped to Scala Common Enrich 0.5.0                                - TODO
 Scala Hadoop Enrich: passed etl_tstamp into Scala Common Enrich (#817)
 Scala Hadoop Enrich: removed event_vendor and ue_name and renamed ue_properties to unstruct_event (#835)
